--- a/package.json
+++ b/package.json
@@ -6,8 +6,17 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
+    "date-fns": "^2.22.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.1",
+    "react-bootstrap-calendar": "0.0.3",
+    "react-bootstrap-date-picker": "^5.1.0",
+    "react-datepicker": "^4.1.1",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.8.6",
+    "react-nice-dates": "^3.1.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
